--- a/WindowsFormsApp1/Form1.resx
+++ b/WindowsFormsApp1/Form1.resx
@@ -124,7 +124,7 @@
   <data name="guna2ImageButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vQAADr0BR/uQrQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAE7ASURBVHhe7d0J
+        vAAADrwBlbxySQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAE7ASURBVHhe7d0J
         nBxlncf/AVHXY1dddXXVXY919+/K39VddF0k6aoJCAIeKARFxWNV1FVEFIQQuqcCgQASbrkvw30f4b7C
         Ee6EkKOq5so1k8k5mclkJnPP1P95Oj/+hJon5Orqfqr68+X1XlZmpp+nq+p5nurqquepIYTYHc/f822T
         GyZ8NB/W7lUIaw8oBLnvFvzcL9W/TygE7hmF0L1U/fvmfODMVB5V//2FQuDMUZqVZUpHzJASxfQrb/w9
@@ -24761,5 +24761,8 @@
   </data>
   <metadata name="guna2BorderlessForm1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>233, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>48</value>
   </metadata>
 </root>
